# desplate

./: README.md
desplate_common/: CMakeLists.txt  package.xml
desplate_common/launch/: visualize.launch.py
desplate_common/rviz/: visualize.rviz
desplate_empy/: CMakeLists.txt  package.xml
desplate_empy/launch/: vehicle.launch.py  vehicle_sdf.launch.py  vehicle_sdf_installed.launch.py  vehicle_urdf.launch.py  vehicle_urdf_installed.launch.py
desplate_empy/rviz/: vehicle.rviz
desplate_empy/sdf/: inertial_box.sdf.em  inertial_cylinder.sdf.em  inertial_sphere.sdf.em  vehicle.sdf.em  wheel.sdf.em
desplate_empy/urdf/: inertial_box.urdf.em  inertial_cylinder.urdf.em  inertial_sphere.urdf.em  vehicle.urdf.em  wheel.urdf.em
desplate_erb/: CMakeLists.txt  package.xml
desplate_erb/launch/: vehicle.launch.py  vehicle_sdf.launch.py  vehicle_sdf_installed.launch.py  vehicle_urdf.launch.py  vehicle_urdf_generate.launch.py  vehicle_urdf_installed.launch.py
desplate_erb/sdf/: inertial_box.sdf.erb  inertial_cylinder.sdf.erb  inertial_sphere.sdf.erb  vehicle.sdf.erb  wheel.sdf.erb
desplate_erb/urdf/: inertial_box.urdf.erb  inertial_cylinder.urdf.erb  inertial_sphere.urdf.erb  vehicle.urdf.erb  wheel.urdf.erb
desplate_xacro/: CMakeLists.txt  package.xml
desplate_xacro/launch/: vehicle.launch.py  vehicle_sdf.launch.py  vehicle_sdf_installed.launch.py  vehicle_urdf.launch.py  vehicle_urdf_installed.launch.py
desplate_xacro/sdf/: inertial_box.sdf.xacro  inertial_cylinder.sdf.xacro  inertial_sphere.sdf.xacro  vehicle.sdf.xacro  wheel.sdf.xacro
desplate_xacro/urdf/: inertial_box.urdf.xacro  inertial_cylinder.urdf.xacro  inertial_sphere.urdf.xacro  vehicle.urdf.xacro  wheel.urdf.xacro
